docs/config_examples/multicluster/routes/route-with-multicluster-service-annotation-and-ab.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/multiClusterServices: '[
    {"clusterName": "cluster2", "serviceName": "svc1", "namespace": "default", "port": "8080", "weight": 20}, 
    {"clusterName": "cluster3", "serviceName": "svc2", "namespace": "default", "port": "8080", "weight": 10}
    ]'
    # you can define either service port or target port in the port value
  labels:
    name: svc1
    f5type: systest
  name: svc1-route-edge
spec:
  host: foo.com
  path: "/test"
  port:
    targetPort: 443
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      -----END PRIVATE KEY-----
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: foo-svc1
    weight: 40
  alternateBackends:
    - kind: Service
      name: foo-svc2
      weight: 30
