docs/config_examples/multicluster/routes/route-with-multicluster-service-annotation.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/multiClusterServices: '[{"clusterName": "cluster2", "serviceName":
          "svc", "namespace": "default", "port": "8080" }]'
    # you can define either service port or target port in the port value
  labels:
    name: svc1
    f5type: systest
  name: svc1-route-edge
spec:
  host: svc1-edge-route.local
  path: "/test"
  port:
    targetPort: 443
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      -----END PRIVATE KEY-----
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: svc1
